add instruction to download archive

--- a/project02/code/nn_tensorflow/nn_tensorflow.ipynb
+++ b/project02/code/nn_tensorflow/nn_tensorflow.ipynb
@@ -4,9 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introduction\n",
+    "# Introduction and instruction to run\n",
     "\n",
-    "This notebook is the notebook used for neural nets training on Google Colab. To run it, you will need to install tensorflow. Moreover, loading the stanford embedding takes around 6 hours and computing the vectors for the full dataset takes around 10 hours. This is why there some savings of numpy arrays as checkpoints."
+    "This notebook is the notebook used for neural nets training on Google Colab. To run it, you will need to install tensorflow. Moreover, loading the stanford embedding takes around 6 hours and computing the vectors for the full dataset takes around 10 hours. This is why there some savings of numpy arrays as checkpoints.\n",
+    "\n",
+    "To run the notebook, you need data that was too big to be given back with the rest. We then uploaded to our Google Drive and here is the link to download it:\n",
+    "\n",
+    "https://drive.google.com/drive/folders/1r8tVqsL2PJ8VaUk7AHsEbeiwoqkxO3Qc?usp=sharing\n",
+    "\n",
+    "\n",
+    "You need to extract the two folders that are in the archive ('data' and 'glove_from_stanford') beside this notebook's file.\n",
+    "\n",
+    "To prove that we haven't modified the archive since the deadline here is the hash (md5) from the .zip file:\n",
+    "\n",
+    "38c149f74806e5c65288825267ecd12a\n",
+    "\n"
    ]
   },
   {
@@ -21,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,17 +88,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "No GPU Found\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "import numpy as np\n",
@@ -187,11 +191,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "f = open(\"vocab_cut_clean_kim_yoon.txt\", 'r')\n",
+    "f = open(\"data/vocab_cut_clean_kim_yoon.txt\", 'r')\n",
     "words = []\n",
     "for l in f.readlines():\n",
     "    words.append(l[:-1])\n",
@@ -202,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -227,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -240,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
