Clean code, run.py and read me for CNN and BERT

--- a/project02/code_julie/BERT/BERT.ipynb
+++ b/project02/code_julie/BERT/BERT.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "You need ktrain, keras and tensorflow to use this notebook. It is strongly adviced to either use Google Colab or either set tensorflow to run it on a good GPU.\n",
     "\n",
-    "As this uses a lot of RAM and processing time, the obtained result on AICrowd where made on the small training set of tweets. If you have a powerful computer, I advice you to train it on the full set to have better results.\n",
+    "As this uses a lot of RAM and processing time, the obtained result on AICrowd where made on the small training set of tweets. If you have a powerful computer, we advice you to train it on the full set to have better results.\n",
     "\n",
     "This is our best submission on AICrowd with accuraca : 0.876, F-1 score : 0.879."
    ]
@@ -59,7 +59,16 @@
     "    for l in f.readlines():\n",
     "        tweets_txt.append(l.strip())\n",
     "    f.close()\n",
-    "    return np.array(list(set(tweets_txt)))"
+    "    return np.array(list(set(tweets_txt)))\n",
+    "\n",
+    "def tweets_txt_test(file_name):\n",
+    "    \"\"\"Parse a txt file and return an array of tweets without removing duplicates\"\"\"\n",
+    "    tweets_txt = []\n",
+    "    f = open(file_name, \"r\")\n",
+    "    for l in f.readlines():\n",
+    "        tweets_txt.append(l.strip())\n",
+    "    f.close()\n",
+    "    return np.array(tweets_txt)"
    ]
   },
   {
@@ -70,6 +79,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To prepare the folder, you need to create this structure in you current directory :"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "Current Directory\n",
+    " ├── BERT_folder\n",
+    " │   ├── train\n",
+    " │   │   ├── pos       \n",
+    " |   │   ├── neg\n",
+    " |   |  \n",
+    " │   ├── test\n",
+    " │   │   ├── pos       \n",
+    " |   │   ├── neg"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -77,8 +108,6 @@
    "source": [
     "tweets_pos = tweets_txt(\"Datasets/twitter-datasets/train_pos.txt\")\n",
     "tweets_neg = tweets_txt(\"Datasets/twitter-datasets/train_neg.txt\")\n",
-    "\n",
-    "np.random.seed(42)\n",
     "\n",
     "tweets_pos_train, tweets_pos_test = divide_test_train(tweets_pos)\n",
     "tweets_neg_train, tweets_neg_test = divide_test_train(tweets_neg)\n",
@@ -198,23 +227,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def tweets_txt(file_name):\n",
-    "    \"\"\"Parse a txt file and return an array of tweets without removing duplicates\"\"\"\n",
-    "    tweets_txt = []\n",
-    "    f = open(file_name, \"r\")\n",
-    "    for l in f.readlines():\n",
-    "        tweets_txt.append(l.strip())\n",
-    "    f.close()\n",
-    "    return np.array(tweets_txt)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tweets_test = tweets_txt(\"Datasets/twitter-datasets/test_data.txt\")"
+    "tweets_test = tweets_txt_test(\"Datasets/twitter-datasets/test_data.txt\")"
    ]
   },
   {
