--- a/project02/report/proj2_report.tex
+++ b/project02/report/proj2_report.tex
@@ -109,6 +109,7 @@ We use the following libraries:
 	\item Scikit-learn
 	\item Tensorflow
 	\item Keras
+	\item Numpy
 \end{itemize}
 \subsection{Preprocessing}
 To clean our data, we use an algorithm similar to the one in Kim Yoon's paper\cite{kimyoonpaper} and code\cite{kimyooncode}. We remove duplicates on the training set and separate known contractions: for example, "don't" becomes "do n't".
