--- a/project02/report/proj2_report.tex
+++ b/project02/report/proj2_report.tex
@@ -167,7 +167,7 @@ Since that method works well, we try some variation: add 1 to 3 dropout layers, 
 	\includegraphics[width=0.5\textwidth]{../plots/cnn.png}
 \end{figure}
 
-Overall, the best CNN method is the third one. It obtains a score of $84.9\%$. In CNN figure, the accuracy is computed only for 3 epochs since after the third epoch, every model is overfitting, irrespective of any added dropout.
+Overall, the best CNN method is the third one with a score of $84.9\%$. In CNN figure, the accuracy is computed only for 3 epochs since after the third epoch, every model is overfitting, irrespective of any added dropout.
 
 \section{BERT}
 BERT (Bidirectional Encoder Representations from Transformers)\cite{bertpaper} is a training process made at Google. Instead of reading a sentence in a certain order, it uses the entire sequence simultaneously.
